# replikator

./: .prettierignore  README.md  next.config.js  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
prisma/: schema.prisma
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: compression.rs  json_io.rs  main.rs  types.rs
src/components/: Controls.tsx  DynamicDatabase.tsx  DynamicIndex.tsx  DynamicInfo.tsx  DynamicRestore.tsx  LogOutput.tsx  NoSsrHome.tsx  RouterButtons.tsx  TimeManager.tsx
src/lib/: types.ts  use-prefers.ts  utils.ts
src/pages/: _app.tsx  database.tsx  index.tsx  info.tsx  restore.tsx
src/styles/: globals.css
