[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.5", features = ["dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-rename-file", "fs-write-file", "notification", "path-all", "window-close", "window-hide", "window-show", "window-start-dragging"] }
# my  deps
jwalk = "0.8.1"
zstd = {version = "0.12", features = ["zstdmt"] }
zstd-safe = { version = "6.0.5+zstd.1.5.4", features = ["experimental"] }
thiserror = "1.0.40"
rayon = "1.7.0"
tree-flat = "0.1.2"
num_cpus = "1.15.0"
chrono = "0.4.24"
pathdiff = "0.2.1"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "z" # Optimize for binary size
strip = true # Remove debug symbols
